# HMT

./: README.md
Adaptive Computing/: Quantized.py
Device_Perception/: CMakeLists.txt  package.xml  setup.py
Device_Perception/launch/: my_device_aware.launch
Device_Perception/nodes/: my_device_aware.py
Model_Perception/: setup.cfg
Model_Perception/package_analyse/: package_analyse_node.py
Transport_Image/: CMakeLists.txt
Transport_Image/src/: my_subscriber.cpp
Transport_Video/: .gitignore  CMakeLists.txt  README.md  package.xml
Transport_Video/config/: example.yaml
Transport_Video/include/video_io/: Video_Publisher_Node.hpp  Video_Saver_Node.hpp  burst_video_saver.hpp  color_encoding.h
Transport_Video/launch/: example.launch.py
Transport_Video/msg/: BurstRecordCommand.msg
Transport_Video/scripts/: compare_videos.py
Transport_Video/src/: burst_video_saver.cpp  color_encoding.cpp  simple_burst_publisher.cpp  video_player.cpp  video_saver.cpp
Transport_Video/videos/: topview_4arena.avi
package_analyse/: package.xml  setup.py
package_analyse/package_analyse/netron/: index.html
